Fixed spacing.

--- a/public/stylesheets/timeline.css
+++ b/public/stylesheets/timeline.css
@@ -53,5 +53,4 @@
 
 #bottomSpacer {
     margin-top: 117px;
-    padding-top: 50px;
 }
